--- a/CSS/hero_section.css
+++ b/CSS/hero_section.css
@@ -7,6 +7,7 @@
 }
 
 .hero-section {
+  margin-top: 30vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
