--- a/CSS/style-blur-navbar.css
+++ b/CSS/style-blur-navbar.css
@@ -1,7 +1,6 @@
 
 .navbar__blurcontent {
     filter: url(#blur-effect);
-    margin: 0 0;
     max-width: 100%;
     opacity: 0.6;
 }
@@ -12,7 +11,7 @@
     z-index: -1;
 }
 
-@media (max-width:768px) {
+@media (max-width:426px) {
     .navbar .navbar__blurcontent {
         display: none;
     }    
@@ -24,7 +23,6 @@
         position: absolute;
         top: 0;
         max-width:100%;
-        margin: 50px 0;
         filter: url(#blur-effect);
         opacity: 0.6;
         z-index: -1;
@@ -33,7 +31,7 @@
         margin: 0 auto;
     }
 
-    @media (max-width:768px) {
+    @media (max-width:426px) {
         .navbar .navbar__blurcontent {
             display: none;
         }
